[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_Project"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "keras",
    "torch",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "pytorch"
]
